@@ -13,6 +13,7 @@
 * Cashnet: Fix overridding item_code per transaction [ntalbott]
 * Authorize.Net: Fix amount formatting [ntalbott]
 * Authorize.Net: Truncate order_id to 20 characters [ntalbott]
+* Authorize.Net: Truncate more fields [duff]
 
 == Version 1.44.1 (Aug 28, 2014)
 
